// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> AllRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-8"
>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Primary
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantFlat colorBrand"
              type="button"
            >
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantFlat colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantFlat colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeMedium variantFlat colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Small
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeSmall variantFlat colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Secondary
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantOutline colorBrand"
              type="button"
            >
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantOutline colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantOutline colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeMedium variantOutline colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Small
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeSmall variantOutline colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Tertiary
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantOutline colorNeutral"
              type="button"
            >
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantOutline colorNeutral"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantOutline colorNeutral"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeMedium variantOutline colorNeutral"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Small
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeSmall variantOutline colorNeutral"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Plain
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantPlain colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantPlain colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantPlain colorBrand"
              type="button"
            >
              <svg
                class="icon mx-[-0.4em]"
                fill="currentColor"
                role="img"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="23"
                >
                  forward
                </title>
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeMedium variantPlain colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeMedium variantPlain colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              class="button sizeMedium variantPlain colorBrand"
              type="button"
            >
              <svg
                class="icon mx-[-0.55em]"
                fill="currentColor"
                role="img"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="26"
                >
                  add
                </title>
                <use
                  xlink:href="test-file-stub#add"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Link
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button variantLink colorBrand"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button variantLink colorBrand"
          type="button"
        >
          Button
          <svg
            class="icon ml-1"
            fill="currentColor"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="27"
            >
              opens in a new tab
            </title>
            <use
              xlink:href="test-file-stub#open-in-new"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Destructive
    </h2>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantFlat colorAlert"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantFlat colorAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Button
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<Button /> Default story renders snapshot 1`] = `
<button
  class="button sizeLarge variantFlat colorBrand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> DestructiveRecommendedVariants story renders snapshot 1`] = `
<h3
  class="typography sizeH3 colorBase spacing2"
>
  Size Large
</h3>
`;

exports[`<Button /> LinkRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <button
      class="button variantLink colorBrand"
      type="button"
    >
      Button
    </button>
  </li>
  <li>
    <button
      class="button variantLink colorBrand"
      type="button"
    >
      Button
      <svg
        class="icon ml-1"
        fill="currentColor"
        role="img"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="13"
        >
          opens in a new tab
        </title>
        <use
          xlink:href="test-file-stub#open-in-new"
        />
      </svg>
    </button>
  </li>
</ul>
`;

exports[`<Button /> PlainRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantPlain colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantPlain colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantPlain colorBrand"
          type="button"
        >
          <svg
            class="icon mx-[-0.4em]"
            fill="currentColor"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="9"
            >
              forward
            </title>
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeMedium variantPlain colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeMedium variantPlain colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          class="button sizeMedium variantPlain colorBrand"
          type="button"
        >
          <svg
            class="icon mx-[-0.55em]"
            fill="currentColor"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="12"
            >
              add
            </title>
            <use
              xlink:href="test-file-stub#add"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<Button /> PrimaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantFlat colorBrand"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantFlat colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantFlat colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeMedium variantFlat colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Small
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeSmall variantFlat colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
</ul>
`;

exports[`<Button /> SecondaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantOutline colorBrand"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantOutline colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantOutline colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeMedium variantOutline colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Small
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeSmall variantOutline colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
</ul>
`;

exports[`<Button /> TertiaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantOutline colorNeutral"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantOutline colorNeutral"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantOutline colorNeutral"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeMedium variantOutline colorNeutral"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Small
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeSmall variantOutline colorNeutral"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
</ul>
`;

exports[`<Button /> passes class names down properly 1`] = `
<button
  class="exampleClassName button sizeLarge variantFlat colorBrand"
  data-testid="example-class-name"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> passes test ids down properly 1`] = `
<button
  class="button sizeLarge variantFlat colorBrand"
  data-testid="example-test-id"
  type="button"
>
  Button
</button>
`;
